# aurora

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust-tests.yml
data/asn1/: X509-Composite-ML-DSA-2025.asn  X509-ML-DSA-2025.asn  X509-SLH-DSA-Module-2024.asn
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
src/: adapters.rs  asn_definitions.rs  forge.rs  helpers.rs  init.rs  lib.rs  query.rs  random.rs  tests.rs  upcalls.rs
src/adapters/: common.rs  libcrux.rs  libcrux_draft.rs  mldsa_native.rs  mod.rs  pqclean.rs  rustcrypto.rs  slhdsa_c.rs  traits.rs
src/adapters/common/: helpers.rs  keymgmt_functions.rs  macros.rs  signature.rs  signature_functions.rs  transcoders.rs  wycheproof.rs
src/adapters/common/signature_functions/: tests.rs
src/adapters/libcrux/: SecP256r1MLKEM768.rs  X25519MLKEM768.rs  mod.rs
src/adapters/libcrux/SecP256r1MLKEM768/: kem_functions.rs  keymgmt_functions.rs  mod.rs
src/adapters/libcrux/X25519MLKEM768/: kem_functions.rs  keymgmt_functions.rs  mod.rs
src/adapters/libcrux/X25519MLKEM768Draft00/: kem_functions.rs  keymgmt_functions.rs  mod.rs
src/adapters/libcrux_draft/: X25519MLKEM768Draft00.rs  mod.rs
src/adapters/libcrux_draft/X25519MLKEM768Draft00/: kem_functions.rs  keymgmt_functions.rs  mod.rs
src/adapters/mldsa_native/: MLDSA44.rs  MLDSA44_Ed25519.rs  MLDSA65.rs  MLDSA65_Ed25519.rs  MLDSA87.rs
src/adapters/mldsa_native/MLDSA44/: decoder_functions.rs  keymgmt_functions.rs
src/adapters/mldsa_native/MLDSA44_Ed25519/: decoder_functions.rs  keymgmt_functions_draft13.rs
src/adapters/mldsa_native/MLDSA65/: encoder_functions.rs  keymgmt_functions.rs
src/adapters/mldsa_native/MLDSA65_Ed25519/: keymgmt_functions_draft13.rs
src/adapters/mldsa_native/MLDSA87/: decoder_functions.rs  keymgmt_functions.rs
src/adapters/pqclean/: MLDSA44.rs  MLDSA44_Ed25519.rs  MLDSA65.rs  MLDSA65_Ed25519.rs  MLDSA87.rs  helpers.rs  mod.rs
src/adapters/pqclean/MLDSA44/: decoder_functions.rs  encoder_functions.rs  keymgmt_functions.rs  signature.rs  signature_functions.rs
src/adapters/pqclean/MLDSA44_Ed25519/: encoder_functions.rs  keymgmt_functions.rs  keymgmt_functions_draft07.rs  keymgmt_functions_draft12.rs  keymgmt_functions_draft13.rs
src/adapters/pqclean/MLDSA65/: decoder_functions.rs  encoder_functions.rs  keymgmt_functions.rs  mod.rs  signature_functions.rs
src/adapters/pqclean/MLDSA65_Ed25519/: decoder_functions.rs  encoder_functions.rs  keymgmt_functions.rs  keymgmt_functions_draft07.rs  keymgmt_functions_draft12.rs  keymgmt_functions_draft13.rs  signature_functions.rs
src/adapters/pqclean/MLDSA87/: decoder_functions.rs  encoder_functions.rs  keymgmt_functions.rs  signature_functions.rs
src/adapters/rustcrypto/: SLHDSASHAKE128f.rs  SLHDSASHAKE192f.rs  SLHDSASHAKE256s.rs
src/adapters/rustcrypto/SLHDSASHAKE128f/: decoder_functions.rs  encoder_functions.rs  keymgmt_functions.rs  signature_functions
src/adapters/rustcrypto/SLHDSASHAKE192f/: decoder_functions.rs  encoder_functions.rs  keymgmt_functions.rs  signature.rs  signature_functions.rs
src/adapters/rustcrypto/SLHDSASHAKE192f/signature_functions/: tests.rs
src/adapters/rustcrypto/SLHDSASHAKE256s/: decoder_functions.rs  encoder_functions.rs  keymgmt_functions.rs
src/adapters/slhdsa_c/: SLHDSASHAKE192f.rs  SLHDSASHAKE256s.rs
src/adapters/slhdsa_c/SLHDSASHAKE192f/: decoder_functions.rs  encoder_functions.rs  keymgmt_functions.rs
src/adapters/slhdsa_c/SLHDSASHAKE256s/: decoder_functions.rs  encoder_functions.rs  keymgmt_functions.rs
tests/: openssl_certs.rs  openssl_decode35.rs  openssl_decode_aurora_v0_10.rs  openssl_decode_aurora_v0_9.rs  openssl_genpkey.rs  openssl_load_provider.rs  openssl_sig_vfy.rs  openssl_version.rs
tests/common/: decode_tests.rs  mod.rs  openssl.rs  setup.rs
tests/data/mldsa65/: pk.pem  sk.pem
tests/data/openssl35/mldsa44/: cert.pem  pk.pem  sk.pem
tests/data/openssl35/mldsa65/: cert.pem
tests/data/openssl35/mldsa87/: cert.pem  pk.pem  sk.pem
tests/data/openssl35/slhdsa_shake_128f/: cert.pem  pk.pem  sk.pem
tests/data/openssl35/slhdsa_shake_256s/: cert.pem  pk.pem  sk.pem
tests/data/openssl35/slhdsashake192f/: pk.pem
tests/data/slhdsashake192f/: cert.pem  sk.pem
tests/data/v0.10.0/mldsa44/: cert.pem  pk.pem  sk.pem
tests/data/v0.10.0/mldsa44_ed25519/: cert.pem  pk.pem  sk.pem
tests/data/v0.10.0/mldsa65/: cert.pem  pk.pem  sk.pem
tests/data/v0.10.0/mldsa65_ed25519/: cert.pem  pk.pem  sk.pem
tests/data/v0.10.0/mldsa87/: cert.pem  pk.pem  sk.pem
tests/data/v0.10.0/slhdsa_shake_128f/: cert.pem  pk.pem  sk.pem
tests/data/v0.10.0/slhdsa_shake_192f/: cert.pem  pk.pem  sk.pem
tests/data/v0.10.0/slhdsa_shake_256s/: cert.pem  pk.pem  sk.pem
tests/data/v0.9.0/mldsa44/: cert.pem  pk.pem  sk.pem
tests/data/v0.9.0/mldsa44_ed25519/: cert.pem  pk.pem  sk.pem
tests/data/v0.9.0/mldsa65/: cert.pem  pk.pem  sk.pem
tests/data/v0.9.0/mldsa65_ed25519/: cert.pem  pk.pem  sk.pem
tests/data/v0.9.0/mldsa87/: cert.pem  pk.pem  sk.pem
tests/data/v0.9.0/slhdsa_shake_128f/: cert.pem  pk.pem  sk.pem
tests/data/v0.9.0/slhdsa_shake_192f/: cert.pem  pk.pem  sk.pem
tests/data/v0.9.0/slhdsa_shake_256s/: cert.pem  pk.pem  sk.pem
