[package]
name = "qubip_aurora"
version = "0.8.5"
edition = "2021"
description = "A framework to build OpenSSL Providers tailored for the transition to post-quantum cryptography"
license = "Apache-2.0"
repository = "https://github.com/QUBIP/aurora"
homepage = "https://qubip.eu"
exclude = ["tests/data"]

[lib]
crate-type = ["cdylib"]
name = "aurora"

[features]
# default = ["env_logger", "export"]
default = ["env_logger"]
env_logger = ["dep:env_logger"]
export = []

[dependencies]
function_name = "0.3"
libc = "0.2"
log = "0.4"
#openssl_provider_forge = { git = "https://github.com/qubip/openssl-provider-forge-rs", tag = "v0.8.4" }
openssl_provider_forge = "0.8.5"
env_logger = { version = "0.11.7", optional = true }
libcrux-kem = "0.0.2-alpha.3"
rand = "0.8"
anyhow = "1.0"
kem = "0.3.0-pre.0"
rand_core = "0.6.4"
pqcrypto-mldsa = "0.1.0"
pqcrypto-traits = "0.3.5"
asn1 = "0.22.0"
zeroize = "1.8.1"
pem = "3.0.5"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
sha2 = "0.10.9"
rasn = "=0.27.0"
lazy_static = "1.5.0"
pkcs8 = { version = "0.10.2" }
ml-dsa = "=0.1.0-rc.0"
slh-dsa = "0.0.3"
der = "0.7.10"
slhdsa-c-rs = "0.0.3"

[build-dependencies]
rasn-compiler = "0.11.0"

[dev-dependencies]
regex = "1"
tempfile = "3"
serde_json = "1.0.140"
paste = "1.0"
