[package]
name = "qubip_aurora"
version = "0.9.0"
edition = "2021"
description = "A framework to build OpenSSL Providers tailored for the transition to post-quantum cryptography"
license = "Apache-2.0"
repository = "https://github.com/QUBIP/aurora"
homepage = "https://qubip.eu"
exclude = ["tests/data"]

[lib]
crate-type = ["cdylib"]
name = "aurora"

[features]
# default = ["env_logger", "export"]
default = [
  "env_logger",
  "default_adapters",
  "_composite_sigs_draft_12_postWGLC",
]
default_adapters = [
  "libcrux_adapter",
  "pqclean_adapter",
  "rustcrypto_adapter",
  "slhdsa_c_adapter",
]
env_logger = ["dep:env_logger"]
export = []

# One (and not more than one!) of the _draft_N features must be enabled to support `_composite_mldsa_eddsa`!
# These features are _experimental_: they will be removed in an upcoming release once the composite_sigs draft graduates to RFC.
# You have been warned: DO NOT DEPEND ON THEM!
_composite_sigs_draft_07 = []
_composite_sigs_draft_12 = []
_composite_sigs_draft_12_postWGLC = []

# These features are _private_: they are automatically enabled by the selection of adapters.
# DO NOT MANUALLY ENABLE THEM IN CARGO.TOML
_mldsa = []
_slhdsa = []
_mlkem_hybrids = []
_composite_mldsa_eddsa = []

libcrux_adapter = ["dep:libcrux-kem", "dep:kem", "_mlkem_hybrids"]
libcrux_draft_adapter = ["dep:libcrux-kem", "dep:kem", "_mlkem_hybrids"]
pqclean_adapter = [
  "dep:pqcrypto-mldsa",
  "dep:pqcrypto-traits",
  "dep:ml-dsa",
  "dep:ed25519-dalek",
  "dep:sha2",
  "_transcoders_deps",
  "_mldsa",
  "_composite_mldsa_eddsa",
]
rustcrypto_adapter = ["dep:slh-dsa", "dep:der", "_transcoders_deps", "_slhdsa"]
slhdsa_c_adapter = ["dep:slhdsa-c-rs", "dep:der", "_transcoders_deps", "_slhdsa"]

# This feature is _private_: it collects all the dependecies for transcoders
_transcoders_deps = ["dep:pem", "dep:pkcs8", "dep:rasn"]

[dependencies]
function_name = "0.3"
libc = "0.2"
log = "0.4"
#openssl_provider_forge = { git = "https://github.com/qubip/openssl-provider-forge-rs", tag = "v0.9.0" }
openssl_provider_forge = "0.9.0"
env_logger = { version = "0.11.7", optional = true }
anyhow = "1.0"
lazy_static = "1.5.0"
asn1 = "0.22.0"
rand = "0.8"
rand_core = "0.6.4"
rasn = { version = "=0.27.0", optional = true }
der = { version = "0.7.10", optional = true }
pem = { version = "3.0.5", optional = true }
pkcs8 = { version = "0.10.2", features = ["alloc"], optional = true }
kem = { version = "0.3.0-pre.0", optional = true }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"], optional = true }
ml-dsa = { version = "=0.1.0-rc.0", optional = true }
slh-dsa = { version = "0.0.3", optional = true }
libcrux-kem = { version = "0.0.2-alpha.3", optional = true }
slhdsa-c-rs = { version = "0.0.3", optional = true }
pqcrypto-mldsa = { version = "0.1.0", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
sha2 = { version = "0.10.9", optional = true }

[build-dependencies]
rasn-compiler = "0.11.0"

[dev-dependencies]
regex = "1"
tempfile = "3"
serde_json = "1.0.140"
paste = "1.0"
